--- a/styles.css
+++ b/styles.css
@@ -34,23 +34,23 @@ nav.nav-bar li a {
 
 h1,
 .header-intro,
-.section-title,
-.caption {
+.section-title {
   color: rgb(255, 199, 44);
 }
 
-.caption,
+.large-caption,
+.medium-caption,
 .section-intro-mini {
   color: rgb(29, 66, 138);
 }
 
 
 .header,
-.largeImg,
+.large-img,
 .section-line,
+.medium-size-image,
 nav,
 main,
-.largeImg-container,
 button {
   max-width: 100%;
 }
@@ -58,7 +58,8 @@ button {
 nav ul,
 main,
 .header-intro,
-.caption {
+.large-caption,
+.medium-caption {
   margin: 0;
 }
 
@@ -123,10 +124,12 @@ nav li {
 }
 
 /*Button*/
-
+button {
+  background-color: rgb(199, )
+}
 
 /*Link Styles*/
-
+button,
 nav.nav-bar li a:link,
 nav.nav-bar li a:visited {
   color: rgb(29, 66, 138);
@@ -146,19 +149,23 @@ main {
 }
 
 /*Large image container and images*/
-.largeImg-container {
+.large-Img-container{
   border: ridge 4px rgb(0, 107, 182);
   margin: 0 auto;
+  width: 100%;
+  height: 100%;
 }
 
-.largeImg {
+.large-img {
   margin: -1px;
+  width: 100%;
 }
 
-.caption {
+.large-caption {
   padding: 2px;
   font-size: .878rem;
   margin-top: -1px;
+  text-align: center;
 }
 
 /*Section lines*/
@@ -211,23 +218,34 @@ main {
 .right-img-container2 {
   float: right;
   clear: left;
+  border: ridge 2px rgb(190, 58, 52);
 }
 
 .left-img-container {
   clear: right;
   float: left;
+  border: ridge 2px rgb(29, 66, 138);
+}
+
+.right-img-container,
+.right-img-container2,
+.large-Img-container,
+.left-img-container {
+  margin: 4px 0 0 0;
 }
 
 .medium-size-image {
-  width: 100%;
-  height: 100%;
+ max-height: 100%;
 }
 
-figcaption {
-  font-size: .524rem;
+.medium-caption {
+  font-size: .621rem;
+  font-weight: 400;
+  padding: 0 3px;
   text-align: center;
-  padding: 0 6px;
 }
+
+
 /*put a float on the main img containers minus large images*/
 /*Add clear property to every section minus the first*?
 
