--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,6 @@ main {
 }
 
 p .article-info {
-  text-align: left;
   font-size: 1.21rem;
 }
 
@@ -207,10 +206,11 @@ p .article-info {
 .left-img-container {
   display: flex;
   flex-direction: column;
-  width: 55%;
-  height: 350px;
+  width: 46%;
+  height: 263px;
 }
 
+.left-img-container2,
 .right-img-container2 {
   display: flex;
   flex-direction: column;
@@ -222,13 +222,12 @@ p .article-info {
 .right-img-container2 {
   float: right;
   clear: left;
-  border: ridge 2px rgb(190, 58, 52);
 }
 
-.left-img-container {
+.left-img-container,
+.left-img-container2 {
   clear: right;
   float: left;
-  border: ridge 2px rgb(29, 66, 138);
 }
 
 .right-img-container,
@@ -246,19 +245,18 @@ p .article-info {
 .medium-caption {
   font-size: .621rem;
   font-weight: 400;
-  padding: 0 3px;
+  padding: 3px;
   text-align: center;
   height: 4px;
 }
 
-
-/*put a float on the main img containers minus large images*/
-/*Add clear property to every section minus the first*?
-
 /*Media queries*/
 
 @media screen and (min-width: 768) and (max-width: 1023px) {
-  
+  .header {
+    max-width: 80%;
+    font-size: 1.7rem;
+  }
 }
 
 @media screen and (max-width: 767) {
