--- a/styles.css
+++ b/styles.css
@@ -218,8 +218,16 @@ p .article-info {
   height: 350px;
 }
 
+.right-small-container {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  height: 150px;
+}
+
 .right-img-container,
-.right-img-container2 {
+.right-img-container2,
+.right-small-container {
   float: right;
   clear: left;
 }
@@ -250,15 +258,18 @@ p .article-info {
   height: 4px;
 }
 
+.small-image {
+  width: 100%;
+}
+
 /*Media queries*/
 
 @media screen and (min-width: 768) and (max-width: 1023px) {
-  .header {
-    max-width: 80%;
-    font-size: 1.7rem;
-  }
+  
 }
 
-@media screen and (max-width: 767) {
-  
+@media (max-width: 767) {
+  .large-Screen {
+    display: none;
+  }
 }
