--- a/styles.css
+++ b/styles.css
@@ -44,22 +44,20 @@ h1,
   color: rgb(29, 66, 138);
 }
 
-
+img,
 .header,
-.large-img,
 .section-line,
-.medium-size-image,
 nav,
 main,
 button {
   max-width: 100%;
 }
 
+header,
 nav ul,
+nav li,
 main,
-.header-intro,
-.large-caption,
-.medium-caption {
+.header-intro {
   margin: 0;
 }
 
@@ -82,7 +80,6 @@ main,
 
 /*header*/
 .header {
-  margin: 0;
   border-bottom: double 8px rgb(255, 199, 44);
   background-color: rgb(0, 107, 182);
 }
@@ -116,8 +113,7 @@ nav ul {
   align-content: center;
 }
 
-nav li { 
-  margin: 0;
+nav li {
   display: inline-block;
   height: 100%;
 }
@@ -151,12 +147,11 @@ main {
   border: ridge 4px rgb(0, 107, 182);
   margin: 0 auto;
   width: 80%;
-  height: 100%;
+  height: 75%;
 }
 
 .large-img {
   margin: -1px;
-  width: 100%;
 }
 
 .large-caption {
@@ -202,53 +197,7 @@ p .article-info {
 }
 
 /*Section Images*/
-.right-img-container,
-.left-img-container {
-  display: flex;
-  flex-direction: column;
-  width: 46%;
-  height: 263px;
-}
 
-.left-img-container2,
-.right-img-container2 {
-  display: flex;
-  flex-direction: column;
-  width: 33%;
-  height: 350px;
-}
-
-.right-small-container {
-  display: flex;
-  flex-direction: column;
-  width: 20%;
-  height: 150px;
-}
-
-.right-img-container,
-.right-img-container2,
-.right-small-container {
-  float: right;
-  clear: left;
-}
-
-.left-img-container,
-.left-img-container2 {
-  clear: right;
-  float: left;
-}
-
-.right-img-container,
-.right-img-container2,
-.large-Img-container,
-.left-img-container {
-  margin: 4px 0 0 0;
-  display: inline-flex;
-}
-
-.medium-size-image {
- max-height: 100%;
-}
 
 .medium-caption {
   font-size: .621rem;
@@ -258,8 +207,9 @@ p .article-info {
   height: 4px;
 }
 
-.small-image {
-  width: 100%;
+/*iframe style*/
+iframe {
+  margin: 10px 60px;
 }
 
 /*Media queries*/
