--- a/styles/tabletStyles.css
+++ b/styles/tabletStyles.css
@@ -10,6 +10,10 @@ h1 {
 }
 
 .header-intro {
-  font-size: 1rem;
-  
+  font-size: 1rem;  
+}
+
+main {
+  max-width: 100%;
+  margin: 10px auto;
 }
