mobile Styling changes

--- a/styles/mobileStyle.css
+++ b/styles/mobileStyle.css
@@ -5,10 +5,49 @@
   scroll-behavior: smooth;
 }
 
-.large-Screen {
+.large-Screen,
+.large-Screen1 {
   display: none;
 }
 
 .mobile-Screen {
   display: block;
 }
+
+h1 {
+  font-size: 2rem;
+}
+
+.header-intro {
+  font-size: 1rem;  
+}
+
+nav ul {
+  justify-content: flex-start;
+}
+
+nav ul li,
+button {
+  margin: 0 2px;
+}
+
+nav li a {
+  font-size: .755rem;
+}
+
+main {
+  max-width: 100%;
+  margin: 10px auto;
+}
+
+.large-img-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.medium-img-container {
+  float: none;
+  width: 40%;
+  height: 30%;
+}
+
