--- a/styles/coverStyle.css
+++ b/styles/coverStyle.css
@@ -31,16 +31,16 @@ body {
 
 header {
   position: fixed;
-  top: 0;
-  right: 8px;
+  top: 40px;
+  right: 0;
   z-index: 10;
-  width: 32%;
+  width: 34%;
   font-style: italic;
   text-align: center;
   background-color: black;
   background-blend-mode: lighten;
   border-radius: 10% 4% 10% 4%;
-  height: 100%;  
+  height: 40%;  
 }
 
 .sr-only {
@@ -101,11 +101,7 @@ header {
     max-width: 100%;
   }
   
-  header {
-    top: 10;
-    left: 0;
-    background-color: transparent;
-  }
+  
 
   #title {
     font-size: 1.875rem;
@@ -127,11 +123,6 @@ header {
 
   .web-screen {
     display: none;
-  }
-
-  header {
-    bottom: 98px;
-    right: 96px;
   }
 
   h1 span.mobile-screen {
