--- a/styles/coverTablet.css
+++ b/styles/coverTablet.css
@@ -1,19 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Roboto:wght@400;500&display=swap');
 
 header,
-  #title,
-  .headerIntro {
-    max-width: 100%;
-  }
-  
-  
+#title,
+.headerIntro {
+  width: 100%;
+}  
 
-  #title {
-    font-size: 1.875rem;
-    margin: 0 auto;
-  }
 
-  .headerIntro {
-    font-size: .875rem;
-    margin: 0;
-  }
+header {
+  position: static;
+  margin: 0;
+  background-color: black;
+}
+
+#title {
+  font-size: 2.15rem;
+  margin: 0 auto;
+}
+
+.headerIntro {
+  font-size: 1.475rem;
+  margin: 0;
+}
